# fastapi-postgresql-crud

./: .env  .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: bf6852a64430_create_users_table.py  e1080895fa59_create_users_table.py
app/: database.py  mail.py  main.py  models.py  oauth2.py  utils.py
app/routers/: auth.py  user.py
app/templates/: _styles.html  base.html  verification.html
